--- a/flandre_get_image/TermsOfService.html
+++ b/flandre_get_image/TermsOfService.html
@@ -6,7 +6,7 @@
   <body>
     <h1>フランドールスカーレット写真Bot利用規約</h1>
     <h2>第一章　定義</h2>
-    <p>フランドールスカーレット写真Bot(以下当該サービスと言います)とは、\n0266stが開発した、Stable Diffusion WebUI APIを用いて画像を作成し、その画像を指定されたディスコードチャンネルに上げるサービスのことを指します。</p>
+    <p>フランドールスカーレット写真Bot(以下当該サービスと言います)とは、0266stが開発した、Stable Diffusion WebUI APIを用いて画像を作成し、その画像を指定されたディスコードチャンネルに上げるサービスのことを指します。</p>
     <p>当該サービスの利用者とは、当該サービスを用いてフランドールスカーレット、並びにZUN氏が開発した東方Projectのキャラクター画像を作成した本人を指すものです。</p>
     <h2>第二章　許可事項</h2>
     <h3></h3>
