--- a/flandre_get_image/TermsOfService.html
+++ b/flandre_get_image/TermsOfService.html
@@ -6,9 +6,11 @@
   <body>
     <h1>フランドールスカーレット写真Bot利用規約</h1>
     <h2>第一章　定義</h2>
-    <p>フランドールスカーレット写真Bot(以下当該サービスと言います)とは、0266stが開発した、<br>Stable Diffusion WebUI APIを用いて画像を作成し、その画像を指定されたディスコードチャンネルに上げるサービスのことを指します。</p>
-    <p>当該サービスの利用者とは、当該サービスを用いてフランドールスカーレット、並びにZUN氏が開発した東方Projectのキャラクター画像を作成した本人を指すものです。</p>
-    <p>当該サービスのBotとは、「Flandre_GET_IMG#2538」を指します。</p>
+    <ul>
+    <li>フランドールスカーレット写真Bot(以下当該サービスと言います)とは、0266stが開発した、<br>Stable Diffusion WebUI APIを用いて画像を作成し、その画像を指定されたディスコードチャンネルに上げるサービスのことを指します。</li>
+    <li>当該サービスの利用者とは、当該サービスを用いてフランドールスカーレット、並びにZUN氏が開発した東方Projectのキャラクター画像を作成した本人を指すものです。</li>
+    <li>当該サービスのBotとは、「Flandre_GET_IMG#2538」を指します。</li>
+    </ul>
     <h2>第二章　許可事項</h2>
     <h3>利用者は、ここで定められた事項をすることができます</h3>
     <ol>
