--- a/flandre_get_image/TermsOfService.html
+++ b/flandre_get_image/TermsOfService.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>フランドールスカーレット写真Bot利用規約</h1>
+    <h1>これは利用規約です。同意される方のみサービスの利用をしてください。</h1>
     <h2>第一章　定義</h2>
     <ul>
     <li>フランドールスカーレット写真Bot(以下当該サービスと言います)とは、0266stが開発した、<br>Stable Diffusion WebUI APIを用いて画像を作成し、その画像を指定されたディスコードチャンネルに上げるサービスのことを指します。</li>
