--- a/flandre_get_image/TermsOfService.html
+++ b/flandre_get_image/TermsOfService.html
@@ -3,7 +3,7 @@
   <head>
     <title>TermsOfService.html - 0266st.github.io/flandre_get_image</title>
   </head>
-  <body>
+  <body class="Body_class">
     <h1>フランドールスカーレット写真Bot利用規約</h1>
     <h1>これは利用規約です。同意される方のみサービスの利用をしてください。</h1>
     <h2>第一章　定義</h2>
