--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
   </head>
   <body>
     <h1>0266st.github.io</h1>
+    <ol>
+    <li><a href="./flandre_get_image/TermsOfService.html">フランドールスカーレット写真Bot利用規約</a></li>
+    </ol>
   </body>
 </html>
