--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <title>index.html - 0266st.github.io</title>
+    <link rel="stylesheet" href="./StyleSheets/style.css">
   </head>
   <body>
     <h1>0266st.github.io</h1>
-    <ol>
+    <ol class="service_links">
     <li><a href="./flandre_get_image/TermsOfService.html">フランドールスカーレット写真Bot利用規約</a></li>
     </ol>
   </body>
