--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html>
   <head>
     <title>index.html - 0266st.github.io</title>
-    <link rel="stylesheet" href="./StyleSheets/style.css">
+    <link rel="stylesheet" href="./StyleSheets/index.css">
   </head>
   <body>
-    <h1>0266st.github.io</h1>
-    <ol class="service_links">
-    <li><a href="./flandre_get_image/TermsOfService.html">フランドールスカーレット写真Bot利用規約</a></li>
-    </ol>
+    <section class="wrapper">
+      <div class="container">
+          <div class="content">
+              <h2 class="heading">Content</h2>
+              <div class="list">
+                <div class="list-item"><a href="./flandre_get_image/TermsOfService.html">フランドールスカーレット写真Bot</a></div>
+              </div>
+          </div>
+      </div>
+  </section>
   </body>
 </html>
