--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
           <div class="content">
               <h2 class="heading">Content</h2>
               <div class="list">
-                <div class="list-item"><a href="./flandre_get_image/TermsOfService.html">フランドールスカーレット写真Bot</a></div>
+                <div class="list-item"><a href="./flandre_get_image/TermsOfService.html">フランドールスカーレット写真BOT</a></div>
               </div>
           </div>
       </div>
