--- a/contents/index.html
+++ b/contents/index.html
@@ -162,7 +162,7 @@
     <li>当該サービスで作成した画像を無断でAI学習に使うこと</li>
     <li>当該サービスのBotに対し、DM(ダイレクトメッセージ)でスパムメッセージを送ること</li>
     <li>当該サービスのBotに対し、過剰なまでのメンションを行うこと</li>
-    <li>その他0266stに対して損害を与えるような行為</li>
+    <li>その他0266stに対して損害を与えるようなこと</li>
     </ol>
 </div>
 </section>
