windowつけ忘れてた

--- a/TermsOfService.html
+++ b/TermsOfService.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <script lang="text/javascript">
-    location.href = "../contents/index.html"
+    windows.location.href = "../contents/index.html"
 </script>
