こうだった

--- a/TermsOfService.html
+++ b/TermsOfService.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <script lang="text/javascript">
-    windows.location.href = "../contents/index.html"
+    window.location.href = "../contents/index.html#terms"
 </script>
