--- a/contents/index.html
+++ b/contents/index.html
@@ -25,7 +25,7 @@
 <nav>
 <ul>
 <li><a href="#about">ABOUT</a></li>
-<li><a href="#gallery">GALLERY</a></li>
+<li><a href="#creation">Creation</a></li>
 <li><a href="#bots">BOTS</a></li>
 <li><a href="#terms">TERMS</a></li>
 <li><a href="#access">ACCESS</a></li>
@@ -57,9 +57,15 @@
 
 <dl id="new">
 <dt>2023/07/13<span>重要</span></dt>
-<dd></dd>
+<dd>Webページを作りました。</dd>
 </dl>
 
+<!--新しく作るときはこれをコピーして作る-->
+<dl id="new">
+  <dt><!--日付--><span><!--タグ--></span></dt>
+  <dd><!--内容--></dd>
+</dl>
+<!--ここまで-->
 </section>
 
 <section class="up">
@@ -72,11 +78,11 @@
 </div>
 <!--/#about-->
 
-<div id="gallery" class="bg2">
+<div id="creation" class="bg2">
 
 <section class="up">
 
-<h2>GALLERY<span>作品集</span></h2>
+<h2>Creation<span>作品集</span></h2>
 
 <div class="list-container">
 
