--- a/contents/index.html
+++ b/contents/index.html
@@ -54,12 +54,12 @@
 <section class="up">
 
 <h2>NEWS<span>お知らせ</span></h2>
-
 <dl id="new">
-<dt>2023/07/13<span>重要</span></dt>
-<dd>Webページを作りました。</dd>
-</dl>
-
+  <dt>2023/07/13<span>重要</span></dt>
+  <dd>Webページを作りました。</dd>
+  <dt>2023/05/27<span>Bot</span></dt>
+  <dd>フランドールスカーレット写真Botを公開しました</dd>
+  </dl>
 <!--新しく作るときはこれをコピーして作る-->
 <dl id="new">
   <dt><!--日付--><span><!--タグ--></span></dt>
