--- a/contents/index.html
+++ b/contents/index.html
@@ -72,7 +72,8 @@
 
 <section class="up">
 
-    <h2>このサイトは0266stのBotに関するサイトです。</h2>
+    <h2>0266stは、一緒にBot開発してくれる仲間を募集しています</h2>
+    <h3>訳：作るの疲れた</h3>
     <p>詳しくはDiscordで@0266stまで</p>
 
 </section>
@@ -95,7 +96,6 @@
 </a>
 </div>
 </div>
-
 <div class="list">
 <a href="images/no.jpeg" data-lightbox="group1" data-title="NO-IMAGE">
 <img src="images/no.jpeg" alt="">
