--- a/contents/index.html
+++ b/contents/index.html
@@ -1,4 +1,20 @@
 <!DOCTYPE html>
+
+
+
+<!--
+  こんなサイトのHTMLを見てる人、暇だよね？
+  HTMLを見るくらい、技術がある人、一緒にPythonで開発して欲しいなぁ
+  なんて。
+  気が向いたら「このページのHTML見たよ」ってDiscordで僕に連絡してくれると嬉しいな
+  最近Minecraftのプラグインも作ってるから忙しいんだよね。
+  じゃあね。
+-->
+
+
+
+
+
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
@@ -19,7 +35,6 @@
 
 <h1 id="logo"><img src="images/logo.jpeg" alt="0266st.github.io"></h1>
 
-<!--メニュー-->
 <div id="menubar">
 
 <nav>
@@ -36,12 +51,7 @@
 <li><a href="#"><i class="fab fa-youtube"></i></a></li>
 </ul>
 </div>
-<!--/#text-->
-
 </div>
-<!--/#menubar-->
-
-<!--スライドショー-->
 <aside class="mainimg-tate"></aside>
 <aside class="mainimg-yoko"></aside>
 
@@ -72,14 +82,13 @@
 
 <section class="up">
 
-    <h2>0266stは、一緒にBot開発してくれる仲間を募集しています</h2>
-    <h3>訳：作るの疲れた</h3>
+    <h2>0266stは、開発の支援をしてくださる方を募集しています。</h2>
+    <!--訳：おかねほしい-->
     <p>詳しくはDiscordで@0266stまで</p>
 
 </section>
 
 </div>
-<!--/#about-->
 <div id="creation" class="bg2">
 
 <section class="up">
@@ -114,12 +123,10 @@
 </div>
 
 </div>
-<!--/.list-container-->
 
 </section>
 
 </div>
-<!--/#gallery-->
 <div id="bots">
 <section class="up">
 <h1>Botについて</h1>
@@ -140,7 +147,6 @@
 </div>
 </section>
 </div>
-<!--/#bots-->
 
 <div id="terms">
 <section class="up">
@@ -202,7 +208,6 @@
 </section>
 
 </div>
-<!--/#contact-->
 
 </main>
 
@@ -214,30 +219,22 @@
 </footer>
 
 </div>
-<!--/#container-->
 
-<!--jQueryの読み込み-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-<!--lightbox用jsファイルの読み込み-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.10.0/js/lightbox-plus-jquery.min.js"></script>
 
-<!--スライドショー（vegas）-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.5.4/vegas.min.js"></script>
 <script src="js/vegas.js"></script>
 
-<!--このテンプレート専用のスクリプト-->
 <script src="js/main.js"></script>
 
-<!--開閉ボタン（ハンバーガーアイコン）-->
 <div id="menubar_hdr">
 <span></span><span></span><span></span>
 </div>
 
-<!--ページの上部へ戻るボタン-->
 <div class="pagetop"><a href="#"><i class="fas fa-angle-double-up"></i></a></div>
 
-<!--パララックス（inview）-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/protonet-jquery.inview/1.1.2/jquery.inview.min.js"></script>
 <script src="js/jquery.inview_set.js"></script>
 
