--- a/contents/index.html
+++ b/contents/index.html
@@ -6,7 +6,7 @@
   こんなサイトのHTMLを見てる人、暇だよね？
   HTMLを見るくらい、技術がある人、一緒にPythonで開発して欲しいなぁ
   なんて。
-  気が向いたら「このページのHTML見たよ」ってDiscordで僕に連絡してくれると嬉しいな
+  気が向いたら「このページのHTML見たよ」ってDiscordで連絡してくれると嬉しいな
   最近Minecraftのプラグインも作ってるから忙しいんだよね。
   じゃあね。
 -->
