--- a/contents/index.html
+++ b/contents/index.html
@@ -4,7 +4,7 @@
 
 <!--
   こんなサイトのHTMLを見てる人、暇だよね？
-  HTMLを見るくらい、技術がある人、一緒にPythonで開発して欲しいなぁ
+  HTMLを見るくらい、技術がある人、一緒に開発して欲しいなぁ
   なんて。
   気が向いたら「このページのHTML見たよ」ってDiscordで連絡してくれると嬉しいな
   最近Minecraftのプラグインも作ってるから忙しいんだよね。
