--- a/contents/index.html
+++ b/contents/index.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
-
-
-
+<html lang="ja">
 <!--
-  こんなサイトのHTMLを見てる人、暇だよね？
+  ちょっと、そこの人！
+  そうそう。きみ。こんなサイトのHTMLを見てるってことは、暇だよね？
   HTMLを見るくらい、技術がある人、一緒に開発して欲しいなぁ
   なんて。
   気が向いたら「このページのHTML見たよ」ってDiscordで連絡してくれると嬉しいな
   最近Minecraftのプラグインも作ってるから忙しいんだよね。
   じゃあね。
 -->
-
-
-
-
-
-<html lang="ja">
 <head>
 <meta charset="UTF-8">
 <title>0266st.github.io</title>
