change index.html, style.css, background.jpeg

--- a/contents/index.html
+++ b/contents/index.html
@@ -36,7 +36,7 @@
 <li><a href="#creation">Creation</a></li>
 <li><a href="#bots">BOTS</a></li>
 <li><a href="#terms">TERMS</a></li>
-<li><a href="#access">ACCESS</a></li>
+<li><a href="#contact">CONTACT</a></li>
 </ul>
 </nav>
 <ul class="icons">
@@ -173,7 +173,7 @@
 </div>
 </section>
 </div>
-<div id="access" class="bg3">
+<div id="contact" class="bg3">
 
 <section class="up">
 <h2>ACCESS<span>管理者へのお問い合わせ</span></h2>
