--- a/contents/index.html
+++ b/contents/index.html
@@ -176,7 +176,7 @@
 <div id="contact" class="bg3">
 
 <section class="up">
-<h2>ACCESS<span>管理者へのお問い合わせ</span></h2>
+<h2>CONTACT<span>管理者へのお問い合わせ</span></h2>
 
 <table class="ta1">
 <caption></caption>
