--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <script>
-    window.location.href = "./cntents/index.html"
+    window.location.href = "./contents/index.html"
 </script>
